restructure project, made registering work
